Adding Oel's Name

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Explorer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>Weather Explorer</h1>
+            <h1>Weather Explorer Oel</h1>
             <p>Stay updated with the latest weather conditions</p>
         </header>
 
@@ -56,6 +56,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
